Some styling for now.

--- a/client/views/comment.html
+++ b/client/views/comment.html
@@ -1,4 +1,9 @@
 <template name="comment">
-{{author}}
-{{text}}
+<div class="comment">
+  <div class="comment-author">
+    {{author}}
+  </div>
+  <div class="comment-text">
+    {{text}}
+  </div>
 </template>
